--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ls",
+  "name": "ashleylaurencegithubpages",
   "version": "1.0.0",
-  "description": "webpack project for github pages",
+  "description": "webpack project for ashleylaurenceweb github pages",
   "main": "index.js",
   "scripts": {
     "build": "webpack -p"
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.1.0",
+    "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
@@ -19,12 +21,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rphunt/gitpages_src.git"
+    "url": "git+https://github.com/ashleylaurenceweb/ashleylauarencepages_src.git"
   },
   "bugs": {
-    "url": "https://github.com/rphunt/gitpages_src/issues"
+    "url": "https://github.com/ashleylaurenceweb/ashleylauarencepages_src/issues"
   },
-  "homepage": "https://github.com/rphunt/gitpages_src#readme",
+  "homepage": "https://github.com/ashleylaurenceweb/ashleylauarencepages_src#readme",
   "dependencies": {
     "lodash": "^4.17.15"
   }
